Prevent top of mage border from being cut off on selection

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -92,7 +92,7 @@ ul#gaming, ul#goodreads, ul#lastfm, ul#flickr {
     width: 8em;
     text-align: center;
     vertical-align: top;
-    padding: 0 1em 3em 1em;
+    padding: .5em 1em 3em 1em;
     float: none;
     overflow: hidden;
     img {
